# BrokenSocket

./: Client.py  README.md  Server.py  pyproject.toml  server_ip.txt
brokensocket/: Server.py  __init__.py  main.py
